[package]
name = "ahitool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
anyhow = "1.0.86"
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
clap = { version = "4.5.15", features = ["derive"] }
csv = "1.3.0"
oauth2 = "4.4.2"
tokio = { version = "1.40.0", features = ["full"] }
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
http-body-util = "0.1.2"
url = "2.5.2"
